[project]
name = "dataset-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scipy>=1.14.1",
    "matplotlib>=3.9.2",
    "networkx>=3.3",
    "pygraphviz>=1.13",
    "ortools>=9.11.4210",
    "tyro>=0.8.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "types-networkx>=3.2.1.20240907",
    "pyqt6>=6.7.1",
]

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pygraphviz.*"
ignore_missing_imports = true
