[project]
name = "gym-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=0.28.1",
    "py4j>=0.10.9.7",
    "matplotlib>=3.9.2",
    "pygame>=2.6.0",
    "click>=8.1.7",
    "ray[rllib]>=2.35.0",
    "torch>=2.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
]

[tool.mypy]
check_untyped_defs = true


[[tool.mypy.overrides]]
module = "py4j.*"
ignore_missing_imports = true
