[project]
name = "gym-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium>=0.28.1",
    "py4j>=0.10.9.7",
    "matplotlib>=3.9.2",
    "pygame>=2.6.0",
    "torch>=2.4.1",
    "tyro>=0.8.10",
    "tensorboard>=2.17.1",
    "moviepy>=1.0.3",
    "wandb>=0.18.1",
    "scipy>=1.14.1",
    "networkx>=3.3",
    "pygraphviz>=1.13",
    "ortools>=9.11.4210",
    "heft",
    "tensordict>=0.5.0",
    "torchrl>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "types-networkx>=3.2.1.20240918",
    "pyqt6>=6.7.1",
    "pandas-stubs>=2.2.2.240909",
]

[tool.uv.sources]
heft = { git = "https://github.com/mackncheesiest/heft" }

[tool.mypy]
check_untyped_defs = true


[[tool.mypy.overrides]]
module = "py4j.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pygraphviz.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "heft.*"
ignore_missing_imports = true
